--- a/src/main/resources/templates/item/itensPorCategoria.html
+++ b/src/main/resources/templates/item/itensPorCategoria.html
@@ -34,13 +34,13 @@
 
 <br>
 
-<form method="GET" action="/createItem">
+<form method="GET" action="/item/createItem">
     <button type="submit" class="btn btn-primary">Cadastro item</button>
 </form>
 
 <br>
 
-<form method="GET" action="/listaItem">
+<form method="GET" action="/item/listaItem">
     <button type="submit" class="btn btn-primary">Lista ITEM</button>
 </form>
 
