--- a/src/main/resources/templates/sobre/sobre.html
+++ b/src/main/resources/templates/sobre/sobre.html
@@ -17,6 +17,7 @@
 	body {
 	  font-family: Arial, Helvetica, sans-serif;
 	  margin: 0;
+	  overflow-x: hidden;
 	}
 	
 	html {
@@ -91,7 +92,7 @@
 
   <header th:replace="~{fragmentos/sideBar}"></header>
 
-  <div class="b-example-divider b-example-vr"></div>
+  <div class="b-example-divider b-example-vr" style="height: auto;"></div>
   
   <div>
   <div class="about-section">
@@ -114,14 +115,15 @@
   <div class="column">
     <div class="card">
       <div class="d-flex justify-content-center">
-        <img src="https://github.com/mdo.png" alt="Jane" style="width:30%">
+<!--        <img src="static/img/Daniel.JPG" alt="Daniel" style="width:30%">-->
+		 <img src="https://scontent-gru2-2.xx.fbcdn.net/v/t39.30808-6/277582264_2198117323684334_171806281883467634_n.jpg?_nc_cat=110&cb=99be929b-59f725be&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=-Q-pj__hUAoAX_9xW8H&_nc_ht=scontent-gru2-2.xx&oh=00_AfDyRnV37jJIO-_dvxNIN6W-LdyJv7auuFbW4005psaLkw&oe=64A2A7C6" alt="daniel" style="width:30%">
       </div>
       <div class="container">
-        <h2>Jane Doe</h2>
-        <p class="title">CEO & Founder</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>jane@example.com</p>
-        <p><button class="button">Contact</button></p>
+        <h2>Daniel T. Costa</h2>
+        <p class="title">Desenvolvedor Back-End</p>
+        <p>O mago do Java, transformando graxa e correias dentadas em linhas de código!</p>
+        <p>danieltheisges@alunos.utfpr.edu.br</p>
+        <p><button class="button">Contato</button></p>
       </div>
     </div>
   </div>
@@ -129,14 +131,14 @@
   <div class="column">
     <div class="card">
       <div class="d-flex justify-content-center">
-        <img src="https://github.com/mdo.png" alt="Mike" style="width:30%">
+        <img src="https://scontent-gru1-1.xx.fbcdn.net/v/t39.30808-6/355892077_2558145144348215_9194442493563804167_n.jpg?_nc_cat=104&cb=99be929b-59f725be&ccb=1-7&_nc_sid=730e14&_nc_ohc=dwkJgGV9WEMAX_LDKCh&_nc_ht=scontent-gru1-1.xx&oh=00_AfDSrPfwfIpcGXVbz302Zkeof_OrK0zZiVAGWTYOC3z8gg&oe=64A2A856" alt="Rodrigo" style="width:30%">
       </div>
       <div class="container">
-        <h2>Mike Ross</h2>
-        <p class="title">Art Director</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>mike@example.com</p>
-        <p><button class="button">Contact</button></p>
+        <h2>Rodrigo G. S. Almeida</h2>
+        <p class="title">Desenvolvedor Front-End</p>
+        <p>O mestre dos pixels e das interações, dando vida e personalidade ao Auto-mec-management!</p>
+        <p>rodrigoalmeida.2002@alunos.utfpr.edu.br</p>
+        <p><button class="button">Contato</button></p>
       </div>
     </div>
   </div>
@@ -144,14 +146,14 @@
   <div class="column">
     <div class="card">
       <div class="d-flex justify-content-center">
-        <img src="https://github.com/mdo.png" alt="John" style="width:30%">
+        <img src="https://scontent-gru2-2.xx.fbcdn.net/v/t39.30808-6/356243579_2558145211014875_677175866503304121_n.jpg?_nc_cat=106&cb=99be929b-59f725be&ccb=1-7&_nc_sid=730e14&_nc_ohc=4EmdoMPVv68AX_sOWlu&_nc_ht=scontent-gru2-2.xx&oh=00_AfCGXp8jKS4bA04u21eksFVqn3EhANj3pvl_Df5-TWTFFw&oe=64A2087E" alt="Giuvane" style="width:30%">
       </div>
       <div class="container">
-        <h2>John Doe</h2>
-        <p class="title">Designer</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>john@example.com</p>
-        <p><button class="button">Contact</button></p>
+        <h2> Giuvane Conti</h2>
+        <p class="title">Professor</p>
+        <p>O professor, um verdadeiro mecânico das mentes, aperta os parafusos do conhecimento com precisão e impulsiona a criatividade dos alunos, garantindo um motor de aprendizado sempre em alta rotação!</p>
+        <p>giuvaneconti@gmail.com</p>
+        <p><button class="button">Contato</button></p>
       </div>
     </div>
   </div>
