--- a/src/main/resources/templates/categoria/createCategoria.html
+++ b/src/main/resources/templates/categoria/createCategoria.html
@@ -31,6 +31,7 @@
       .b-example-divider {
         width: 100%;
         height: 3rem;
+        /*height: 100%;*/
         background-color: rgba(0, 0, 0, .1);
         border: solid rgba(0, 0, 0, .15);
         border-width: 1px 0;
@@ -41,6 +42,7 @@
         flex-shrink: 0;
         width: 1.5rem;
         height: 100vh;
+        /*height: 100%;*/
       }
 
       .bi {
