--- a/src/main/resources/templates/servico/createServico.html
+++ b/src/main/resources/templates/servico/createServico.html
@@ -97,38 +97,47 @@
 	<div class="b-example-divider b-example-vr"></div>
 	
   <div class='ConteudoPR' style="padding: 40px 90px;">
-	  <form method="POST" action="/item/createItem" th:object="${item}">
-	    <input type="hidden" th:value="${item.id}" name="id" />
-	    
-	    <div class="mb-3">
-	      <label class="form-label">Nome do Item</label>
-	      <input type="text" class="form-control" name="nome" th:value="${item.nome}">
-	    </div>
-	    
-	    <div class="mb-3">
-	      <label class="form-label">Descrição do Item</label>
-	      <input type="text" class="form-control" name="descricao" th:value="${item.descricao}">
-	    </div>
+	  <form method="POST" action="/servico/createServico" th:object="${servico}">
+		<label class="form-label">ID MANUTENCAO</label>
+	    	<select name="manutencao_id" class="form-select">
+	       		<option value="">Selecione o ID MANUTENCAO</option>
+	        	<option th:each="service : ${servicos}" th:value="${service.id}" th:text="${service.name}"></option>
+	   		</select>
+	   		
+	   	<div class="mb-3">
+	    	<label class="form-label">ID ITEM</label>
+	    	<select name="item_id" class="form-select">
+	       		<option value="">Selecione o ID ITEM</option>
+	        	<option th:each="service : ${servicos}" th:value="${service.id}" th:text="${service.name}"></option>
+	   		</select>
+		</div>
 	    
 	    <div class="mb-3">
 	      <label class="form-label">Preço do Item</label>
-	      <input type="text" class="form-control" name="preco" th:value="${item.preco}">
+	      <input type="number" class="form-control" name="preco" th:value="${servico.preco}">
 	    </div>
 	    
 	    <div class="mb-3">
-	    	<label class="form-label">Categoria do Item</label>
-	    	<select name="categoria_id" class="form-select">
-	       		<option value="">Selecione uma categoria</option>
-	        	<option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
-	   		</select>
-		</div>
+	      <label class="form-label">QNT do Item</label>
+	      <input type="number" class="form-control" name="quantidade" th:value="${servico.quantidade}">
+	    </div>
+	    
+	    <div class="mb-3">
+	      <label class="form-label">Desconto</label>
+	      <input type="number" class="form-control" name="desconto" th:value="${servico.desconto}">
+	    </div>
+	    
+	    <div class="mb-3">
+	      <label class="form-label">Descrição</label>
+	      <input type="text" class="form-control" name="DescricaoServico" th:value="${servico.DescricaoServico}">
+	    </div>
 	
-	    <button type="submit" class="btn btn-primary">Cadastrar ITEM</button>
+	    <button type="submit" class="btn btn-primary">Cadastrar Serviço</button>
 	</form>
 	
 	<br>
-	<form method="GET" action="/item/listaItem">
-	    <button type="submit" class="btn btn-primary">Lista ITEM</button>
+	<form method="GET" action="/servico/listaServico">
+	    <button type="submit" class="btn btn-primary">Lista Servico</button>
 	</form>
 </div>
 </main>
